--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,9 @@
 .home-page {
   font-family: Helvetica, Arial, sans-serif;
   font-weight: 300;
-  font-size: 12px;
+  font-size: 14px;
+  max-width: 680px;
+  margin: auto;
 }
 
 .big-title {
