--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -18,6 +18,7 @@
       text-decoration: none;
       &:hover {
         text-decoration: underline;
+        text-decoration-thickness: 1px !important;
       }
     }
   }
