finished content of page

--- a/src/assets/base-theme.scss
+++ b/src/assets/base-theme.scss
@@ -1,11 +1,13 @@
 
 // FONT FAMILIES
 
+$font-family-neue-haas: neue-haas-grotesk-display, sans-serif;
 $font-family-serif-header: neue-haas-grotesk-display, sans-serif;
 $font-family-body-big: $font-family-serif-header;
 
 $font-family-body: aktiv-grotesk, sans-serif;
 
+$font-family-calson: adobe-caslon-pro, serif;
 
 // FONT WEIGHTS
 
