--- a/src/assets/base-theme.scss
+++ b/src/assets/base-theme.scss
@@ -19,3 +19,31 @@ $font-weight-body-light: 300;
 
 $font-size-header-big: 120px;
 $font-size-body-big: 32px;
+
+
+// media queries for page size
+$media-sm: 640px;
+
+
+// underline fade css
+.underline-fadein {
+  overflow: hidden;
+  position: relative;
+
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: hotpink;
+    transition: opacity 300ms, transform 300ms;
+    transform: translate3d(-101%, 0, 0);
+  }
+  &:hover::after,&:focus::after {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
