--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -1,10 +1,38 @@
 @import "../../assets/base-theme.scss";
 
-.navigation-default-desktop {
+@mixin navigation-default-desktop {
   position: absolute;
   top: 0;
   right: 8px;
+
+  .link {
+    display: inline-block;
+    margin-left: 48px
+  }
 }
+
+.navigation-default-desktop {
+  @include navigation-default-desktop;
+}
+
+@mixin navigation-default-mobile {
+  border-top: 1px solid black;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding-bottom: 2px;
+  text-align: right;
+  width: 100vw;
+
+  .link {
+    display: table;
+    float: right;
+    clear: both;
+    margin-bottom: 22px;
+    margin-right: 22px;
+  }
+}
+
 
 .navigation {
   font-family: $font-family-serif-header;
@@ -12,12 +40,9 @@
   font-size: 32px;
   
   .link {
-    display: inline-block;
-    margin-left: 48px;
     a {
       text-decoration: none;
       &:hover {
-        text-decoration: underline;
         text-decoration-thickness: 1px !important;
       }
     }
